--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^9.9.0",
+    "firebase-admin": "^11.0.0",
     "framer-motion": "^6.4.2",
     "next": "12.2.0",
+    "nookies": "^2.5.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
