--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "eslint-config-next": "12.2.0",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.4"
+  },
+  "resolutions": {
+    "autoprefixer": "10.4.5"
   }
 }
