--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.2",
     "firebase": "^9.9.0",
     "firebase-admin": "^11.0.0",
     "framer-motion": "^6.4.2",
@@ -18,6 +19,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-bootstrap-typeahead": "^6.0.0-rc.3",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "18.2.0",
     "react-stopwatch": "^2.0.4"
   },
